--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.runtime-filter.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.runtime-filter.md
@@ -8,7 +8,7 @@ Runtime Filter 是一种用于优化 Hash Join 性能的技术，它可以通过
 
 Runtime Filter 实际上是一个过滤器，它可以利用 Hash Join 的 Build 过程构建一个轻量的 Filter，然后将 Filter 广播发送给参与 Probe 的大表，Probe Table 可以使用多个 Runtime Filter 来提前在存储层过滤数据，减少真正参与 Hash Join 以及网络传输的数据，从而提高查询的效率。
 
-Runtime Filter 可以基于三个层面进行分类：基于是否需要跨机传输层面，Runtime Filter 可以分为 Local 和 Global 两类；基于 Runtime Filter 的数据结构层面，Runtime Filter 可以分为 Bloom Filter、In Filter 和 Range Filter 三类。无论是 Local Runtime Filter 还是 Global Runtime Filter，都可以使用这三种数据结构的 Runtime Filter；基于 Runtime Filter 过滤的实体层面，Runtime Filter 可以分为过滤上连接键和过滤分区两类，第一类为普通 Runtime Filter（即 Local Runtime Filter 和 Global Runtime Filter），第二类为 Part Join Filter。普通 Runtime Filter 支持三种数据结构的 Runtime Filter，而 Part Join Filter 当前仅支持 Bloom Filter。
+Runtime Filter 可以基于三个层面进行分类：基于是否需要跨机传输层面，Runtime Filter 可以分为 Local 和 Global 两类；基于 Runtime Filter 的数据结构层面，Runtime Filter 可以分为 Bloom Filter、In Filter 和 Range Filter 三类。无论是 Local Runtime Filter 还是 Global Runtime Filter，都可以使用这三种数据结构的 Runtime Filter；基于 Runtime Filter 过滤的实体层面，Runtime Filter 可以分为过滤上连接键和过滤分区两类，第一类为普通 Runtime Filter，第二类为 Part Join Filter。基于过滤的实体层面的分类和和基于需要跨机传输层面分类是正交的。普通 Runtime Filter 支持三种数据结构的 Runtime Filter，而 Part Join Filter 当前仅支持 Bloom Filter。
 
 本文将通过具体示例详细介绍 Local Runtime Filter、Global Runtime Filter 和 Part Join Filter。
 
