--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
@@ -1,6 +1,6 @@
 # 锁定查询结果 LOCK IN SHARE MODE
 
-`SELECT ... LOCK IN SHARE MODE` 是一种行级锁，用于在查询数据时获取共享锁，防止其他事务对数据进行写操作，但允许其他事务对数据进行读操作。
+`SELECT ... LOCK IN SHARE MODE` 用于在查询数据时获取共享锁，防止其他事务对数据进行写操作，但允许其他事务对数据进行读操作。即使用该语句时，会在读取的数据行上设置共享模式锁定，其他会话可以读取这些行，但在当前事务提交之前其他事务不能对其进行修改
 
 <main id="notice" type='notice'>
 <h4>注意</h4>
@@ -40,7 +40,24 @@
     START TRANSACTION;
     ```
 
-4. 在 **会话 2** 中，执行下面 SQL 语句在表 `test_tbl1` 中 `id` 值等于 `1` 的行对应的 name 的改为 'A1A1A1'。该 SQL 语句会等待，直到 **会话 1** 的事务回滚或者 `COMMIT` 才得到执行。
+4. 在 **会话 2** 中，执行下面 SQL 语句查询表 `test_tbl1` 中 `id` 值等于 `1` 的记录。
+
+    ```sql
+    SELECT * FROM test_tbl1 WHERE id = 1;
+    ```
+
+    返回结果如下：
+
+    ```shell
+    +------+------+
+    | id   | name |
+    +------+------+
+    |    1 | A1   |
+    +------+------+
+    1 row in set
+    ```
+
+5. 在 **会话 2** 中，执行下面 SQL 语句在表 `test_tbl1` 中 `id` 值等于 `1` 的行对应的 name 的改为 'A1A1A1'。该 SQL 语句会等待，直到 **会话 1** 的事务回滚或者 `COMMIT` 才得到执行。
 
     ```sql
     UPDATE test_tbl1 SET name = 'A1A1A1' WHERE id = 1;
@@ -52,13 +69,13 @@
     ERROR 1205 (HY000): Lock wait timeout exceeded; try restarting transaction
     ```
 
-5. 在 **会话 1** 中，执行下面 SQL 语句提交事务。
+6. 在 **会话 1** 中，执行下面 SQL 语句提交事务。
 
     ```sql
     COMMIT;
     ```
 
-6. 在 **会话 2** 中，再次执行 **步骤 4** 的更新语句。
+7. 在 **会话 2** 中，再次执行 **步骤 4** 的更新语句。
 
     ```sql
     UPDATE test_tbl1 SET name = 'A1A1A1' WHERE id = 1;
