--- a/zh-CN/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
+++ b/zh-CN/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
@@ -2,9 +2,9 @@
 
 数据库系统在应用架构中承担了数据存储和查询的功能，其对企业数据安全和保障业务连续性至关重要。高可用是数据库系统架构设计中首要考虑的因素，高可用诉求包括服务高可用和数据高可靠。本文将介绍 OceanBase 的服务高可用技术，数据高可靠技术将在后面的《备份恢复》章节中介绍。
 
-OceanBase 数据库具备多样化的服务高可用技术，包括集群内的基于多副本的容灾和基于仲裁的容灾以及集群间的物理备库容灾。
+OceanBase 数据库具备多样化的服务高可用技术，包括集群内的多副本容灾和基于仲裁的容灾以及集群间的物理备库容灾。
 
-## 基于多副本的容灾方案
+## 多副本容灾
 
 OceanBase 数据库基于 Paxos 协议实现了多副本容灾方案，对用户提供少数派故障时 RPO  = 0，RTO < 8s 的高可用能力。
 
@@ -12,7 +12,7 @@ OceanBase 数据库基于 Paxos 协议实现了多副本容灾方案，对用户
 
 多副本容灾面向集群内少数派节点异常的场景，具备极好的故障恢复速度及数据零丢失能力。为了能够应对跨区域的异地容灾（无法接受三地五中心）以及更高的可用性需求（例如多数派节点异常、软件上的 Bug 等），可以采用物理备库容灾。
 
-## 基于仲裁的容灾方案
+## 基于仲裁的容灾
 
 基于仲裁的容灾方案，是 OceanBase 数据库以 Paxos 多副本容灾方案为基础创新性地提供的高可用解决方案。
 
