修改 11.query-results-lock-in-share-mode.md

--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
@@ -1,10 +1,10 @@
 # 锁定查询结果 LOCK IN SHARE MODE
 
-`SELECT ... LOCK IN SHARE MODE` 用于在查询数据时获取共享锁，防止其他事务对数据进行写操作，但允许其他事务对数据进行读操作。即使用该语句时，会在读取的数据行上设置共享模式锁定，其他会话可以读取这些行，但在当前事务提交之前其他事务不能对其进行修改
+`SELECT ... LOCK IN SHARE MODE` 用于在查询数据时获取共享锁，防止其他事务对数据进行写操作，但允许其他事务对数据进行读操作。即使用该语句时，会在读取的数据行上设置共享模式锁定，其他会话可以读取这些行，但在当前事务提交之前其他事务不能对其进行修改。
 
 <main id="notice" type='notice'>
 <h4>注意</h4>
-<p>OceanBase 数据库模拟了 <code>LOCK IN SHARE MODE</code> 共享锁语法的功能，使用写锁来实现，这样可以满足一些软件的兼容性需求，同时保证语法的正确性。然而，由于使用写锁会阻塞读操作，因此一般不建议使用该语法，特别是在性能敏感的场景中更应该避免使用。</p>
+<p>OceanBase 数据库模拟了 <code>LOCK IN SHARE MODE</code> 共享锁语法的功能，使用写锁来实现，这样可以满足一些软件的兼容性需求，同时保证语法的正确性。由于使用写锁会使添加了 <code>LOCK IN SHARE MODE</code> 命令的读操作之间相互阻塞，因此一般不建议使用该语法，特别是在性能敏感的场景中更应该避免使用。</p>
 </main>
 
 本文通过示例介绍如何使用 `SELECT ... LOCK IN SHARE MODE` 锁定查询结果。
