--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md
@@ -9,7 +9,10 @@
 ## 语法
 
 ```sql
-{EXPLAIN | DESCRIBE | DESC} [explain_type] dml_statement;
+{EXPLAIN [INTO table_name ] [SET statement_id = string]  
+ | DESCRIBE 
+ | DESC} 
+[explain_type] [PRETTY | PRETTY_COLOR] dml_statement;
 
 explain_type：
     BASIC 
@@ -28,16 +31,123 @@ dml_statement:
 
 ## 参数解释
 
-|            **参数**             |                                                                                                             **描述**                                                                                                             |
-|-------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| BASIC                         | 指定输出计划的基础信息，如算子 ID、算子名称、所引用的表名。                                                                                                                                                                                                |
-| OUTLINE                       | 指定输出的计划信息包含 `OUTLINE` 信息。                                                                                                                                                                                                      |
-| EXTENDED                      | `EXPLAIN` 产生附加信息，包括：每个算子的输入列和输出列，访问表的分区信息，当前使用的 Filter 信息，如果当前算子使用了索引，显示所使用的索引列及抽取的 Query Range。                                                                                                                               |
-| EXTENDED_NOADDR               | 以简约的方式展示附加信息。                                                                                                                                                                                                                  |
-| PARTITIONS                    | 显示分区相关信息。                                                                                                                                                                                                                      |
+|            **参数**             |                     **描述**                   |
+|-------------------------------|-------------------------------------------|
+| INTO table_name | 表示将 `EXPLAIN` 的计划信息保存到指定表内。如果没有指定 `INTO table_name`，默认查询到 `PLAN_TABLE` 表内。|
+| SET statement_id | 表示当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息。如果没有指定 `SET statement_id`，默认使用空字符串作为信息标记。 |
+| PRETTY | PRETTY_COLOR | 将计划树中的父节点和子节点使用树线或彩色树线连接起来，使得执行计划展示更方便阅读。|
+| BASIC                         | 指定输出计划的基础信息，如算子 ID、算子名称、所引用的表名。   |
+| OUTLINE                       | 指定输出的计划信息包含 `OUTLINE` 信息。 |
+| EXTENDED                      | `EXPLAIN` 产生附加信息，包括：每个算子的输入列和输出列，访问表的分区信息，当前使用的 Filter 信息，如果当前算子使用了索引，显示所使用的索引列及抽取的 Query Range。 |
+| EXTENDED_NOADDR               | 以简约的方式展示附加信息。   |
+| PARTITIONS                    | 显示分区相关信息。  |
 | FORMAT = {TRADITIONAL\| JSON} | 指定 `EXPALIN` 的输出格式： <ul><li> `TRADITIONAL`：表格输出格式    </li> <li> `JSON`：`KEY:VALUE` 输出格式，JSON 显示为JSON 字符串，包括 `EXTENDED` 和 `PARTITIONS` 信息。</li></ul>    |
 
 ## 示例
+
+* 解释查询计划，并把计划信息保存在指定表 `test` 内。
+  
+  ```shell
+  /* 创建表 */
+  obclient> CREATE TABLE test (statement_id VARCHAR(30), plan_id INT, gmt_create TIMESTAMP, 
+     remarks VARCHAR(4000), operator VARCHAR(255), options VARCHAR(255), object_node VARCHAR(40), 
+     object_owner VARCHAR(128), object_name VARCHAR(128), object_alias VARCHAR(261), object_instance INT, 
+     object_type VARCHAR(30),optimizer VARCHAR(4000), search_columns INT, id INT, parent_id INT, depth INT,
+     position INT,is_last_child INT, cost INT, cardinality INT, bytes INT, rowset INT, other_tag VARCHAR(4000),
+     partition_start VARCHAR(4000), partition_stop VARCHAR(4000), partition_id INT, other VARCHAR(4000), 
+     distribution VARCHAR(64), cpu_cost INT, io_cost INT, temp_space INT, access_predicates VARCHAR(4000), 
+     filter_predicates VARCHAR(4000),startup_predicates VARCHAR(4000), projection VARCHAR(4000),
+     special_predicates VARCHAR(4000), time INT, qblock_name VARCHAR(128), other_xml VARCHAR(4000));
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE t1(c1 INT);
+  Query OK, 0 rows affected
+
+  obclient> EXPLAIN INTO test SELECT COUNT(*) FROM t1;
+  +--------------------------------------------------------------------------+
+  | Query Plan                                                               |
+  +--------------------------------------------------------------------------+
+  | =================================================                        |
+  | |ID|OPERATOR         |NAME|EST.ROWS|EST.TIME(us)|                        |
+  | -------------------------------------------------                        |
+  | |0 |SCALAR GROUP BY  |    |1       |2           |                        |
+  | |1 |└─TABLE FULL SCAN|t1  |1       |2           |                        |
+  | =================================================                        |
+  | Outputs & filters:                                                       |
+  | -------------------------------------                                    |
+  |   0 - output([T_FUN_COUNT_SUM(T_FUN_COUNT(*))]), filter(nil), rowset=256 |
+  |       group(nil), agg_func([T_FUN_COUNT_SUM(T_FUN_COUNT(*))])            |
+  |   1 - output([T_FUN_COUNT(*)]), filter(nil), rowset=256                  |
+  |       access(nil), partitions(p0)                                        |
+  |       is_index_back=false, is_global_index=false,                        |
+  |       range_key([t1.__pk_increment]), range(MIN ; MAX)always true        |
+  +--------------------------------------------------------------------------+
+  14 rows in set
+
+  obclient> SELECT DBMS_XPLAN.DISPLAY('TYPICAL',null,'test')\G;
+  *************************** 1. row ***************************
+  DBMS_XPLAN.DISPLAY('TYPICAL',null,'test'):
+   =================================================
+  |ID|OPERATOR         |NAME|EST.ROWS|EST.TIME(us)|
+  -------------------------------------------------
+  |0 |SCALAR GROUP BY  |    |1       |2           |
+  |1 |└─TABLE FULL SCAN|t1  |1       |2           |
+  =================================================
+
+  Outputs & filters:
+  -------------------------------------
+    0 - output([T_FUN_COUNT_SUM(T_FUN_COUNT(*))]), filter(nil), rowset=256
+        group(nil), agg_func([T_FUN_COUNT_SUM(T_FUN_COUNT(*))])
+    1 - output([T_FUN_COUNT(*)]), filter(nil), rowset=256
+        access(nil), partitions(p0)
+        is_index_back=false, is_global_index=false,
+        range_key([t1.__pk_increment]), range(MIN ; MAX)always true
+  1 row in set
+  ```
+
+* 解释查询计划，并为查询设置标识信息。
+
+  ```shell
+  obclient> EXPLAIN INTO test SET statement_id='test2' SELECT COUNT(*) FROM t1;
+  +--------------------------------------------------------------------------+
+  | Query Plan                                                               |
+  +--------------------------------------------------------------------------+
+  | =================================================                        |
+  | |ID|OPERATOR         |NAME|EST.ROWS|EST.TIME(us)|                        |
+  | -------------------------------------------------                        |
+  | |0 |SCALAR GROUP BY  |    |1       |2           |                        |
+  | |1 |└─TABLE FULL SCAN|t1  |1       |2           |                        |
+  | =================================================                        |
+  | Outputs & filters:                                                       |
+  | -------------------------------------                                    |
+  |   0 - output([T_FUN_COUNT_SUM(T_FUN_COUNT(*))]), filter(nil), rowset=256 |
+  |       group(nil), agg_func([T_FUN_COUNT_SUM(T_FUN_COUNT(*))])            |
+  |   1 - output([T_FUN_COUNT(*)]), filter(nil), rowset=256                  |
+  |       access(nil), partitions(p0)                                        |
+  |       is_index_back=false, is_global_index=false,                        |
+  |       range_key([t1.__pk_increment]), range(MIN ; MAX)always true        |
+  +--------------------------------------------------------------------------+
+  14 rows in set
+
+  obclient> SELECT DBMS_XPLAN.DISPLAY('TYPICAL','test2','test')\G;
+  *************************** 1. row ***************************
+  DBMS_XPLAN.DISPLAY('TYPICAL','test2','test'): =================================================
+  |ID|OPERATOR         |NAME|EST.ROWS|EST.TIME(us)|
+  -------------------------------------------------
+  |0 |SCALAR GROUP BY  |    |1       |2           |
+  |1 |└─TABLE FULL SCAN|t1  |1       |2           |
+  =================================================
+
+  Outputs & filters:
+  -------------------------------------
+    0 - output([T_FUN_COUNT_SUM(T_FUN_COUNT(*))]), filter(nil), rowset=256
+        group(nil), agg_func([T_FUN_COUNT_SUM(T_FUN_COUNT(*))])
+    1 - output([T_FUN_COUNT(*)]), filter(nil), rowset=256
+        access(nil), partitions(p0)
+        is_index_back=false, is_global_index=false,
+        range_key([t1.__pk_increment]), range(MIN ; MAX)always true
+  1 row in set
+  ``` 
 
 * 省略 `explain_type`，返回语句的执行计划。
 
