--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/1.dbms-xplan-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/1.dbms-xplan-overview-oracle.md
@@ -17,6 +17,10 @@
 
 | 子程序 | 描述 |
 | --- | --- |
-| [DISABLE_OPT_TRACE](2.disable-opt-trace-oracle.md) | 关闭当前 Session 的优化器全链路追踪功能。 |
-| [ENABLE_OPT_TRACE](3.enable-opt-trace-oracle.md) | 开启当前 Session 的优化器全链路追踪。 |
-| [SET_OPT_TRACE_PARAMETER](4.set-opt-trace-parameter-oracle.md) | 修改当前 Session 的优化器全链路追踪的参数。 |
+| [DISPLAY_ACTIVE_SESSION_PLAN](2.display-active-session-plan-of-oracle-mode.md)|用于展示指定 Session 的实时计划详情。|
+| [DISPLAY_CURSOR](3.display-cursor-of-oracle-mode.md) | 用于展示已执行的查询计划详情。 |
+| [DISPLAY](4.display-of-oracle-mode.md) | 查询并格式化历史的 `EXPLAIN` 计划。 |
+| [DISABLE_OPT_TRACE](5.disable-opt-trace-oracle.md) | 关闭当前 Session 的优化器全链路追踪功能。 |
+| [DISPLAY_SQL_PLAN_BASELINE](6.display-sql-plan-baseline-of-oracle-mode.md) | 查看 SPM 的基线计划。 |
+| [ENABLE_OPT_TRACE](8.enable-opt-trace-oracle.md) | 开启当前 Session 的优化器全链路追踪。 |
+| [SET_OPT_TRACE_PARAMETER](10.set-opt-trace-parameter-oracle.md) | 修改当前 Session 的优化器全链路追踪的参数。 |
