修改 8.pl-json-data-structure-oracle.md

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/8.pl-json-data-structure-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/8.pl-json-data-structure-oracle.md
@@ -4,6 +4,11 @@
 
 静态函数 `parse` 以 `VARCHAR2`、`CLOB` 或 `BLOB` 的实例作为输入参数，将其解析为 JSON 文本以返回类型为 `JSON_ELEMENT_T` 或 `JSON_OBJECT_T` 的实例。
 
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+  </main>
+
 ## JSON_ELEMENT_T 对象类型
 
 `JSON_ELEMENT_T` 通过解析 JSON 文本来构造 `JSON_ELEMENT_T` 类型的实例。
