--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/8.sp-sql-info-collection.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/8.sp-sql-info-collection.md
@@ -1,6 +1,11 @@
 # 存储过程的 SQL 信息收集
 
-OceanBase 数据库在编译期间会收集存储过程中是否涉及 DML 语句/读写 Package 变量等因子，这些信息主要用于嵌套场景下，判断带 UDF（User-Defined functions）或者 Trigger 的 DML 语句是否要并行执行。
+OceanBase 数据库在编译期间会收集存储过程中是否涉及 DML 语句/读写 Package 变量等因子，这些信息主要用于嵌套场景下，判断带 UDF（User-Defined functions）或者 Trigger 的 DML 语句是否需要并行执行。
+
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+  </main>
 
 ## 原理介绍
 
