--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/2.display-active-session-plan-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/2.display-active-session-plan-of-oracle-mode.md
@@ -2,6 +2,11 @@
 
 `DISPLAY_ACTIVE_SESSION_PLAN` 函数用于展示指定 Session 的实时计划详情。
 
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+  </main>
+
 ## 函数定义
 
 ```sql
