--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.runtime-filter.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.runtime-filter.md
@@ -262,7 +262,7 @@ EXPLAIN SELECT /*+ PARALLEL(3) LEADING(tt1 tt2) PX_PART_JOIN_FILTER(tt2)*/ * FRO
 
 Runtime Filter 具有自适应能力。在默认配置下，当 Join 基于连接键的选择率满足条件会默认创建三种数据结构的 Runtime Filter，即 In、Range 和 Bloom Filter。In Filter 内部使用 Hash 表进行过滤判定，Range Filter 内部使用最大或最小值进行过滤判定，Bloom Filter 内部使用 Bloom Filter 过滤。
 
-在过滤优先级上，由于 In Filter 具有最准的过滤性，当 In Filter 在执行期被启用时，其他两种 Filter 会被自适应关闭，在执行期间，优化器会根据实际 NDV 值确定是否使用 In Filter。此外，每种 Filter 在实际计算中会根据实时过滤性自适应 Disable Filter 以及重新 Enable Filter。
+在过滤优先级上，由于 In Filter 具有最准的过滤性，当 In Filter 在执行期被启用时，其他两种 Filter 会被自适应关闭，在执行期间，执行器会根据实际 NDV 值确定是否使用 In Filter。此外，每种 Filter 在实际计算中会根据实时过滤性自适应 Disable Filter 以及重新 Enable Filter。
 
 OceanBase 数据库提供了系统变量用于调整 Runtime Filter 执行的相关策略，包括 `runtime_filter_type`、`runtime_filter_max_in_num`、`runtime_filter_wait_time_ms` 和 `runtime_bloom_filter_max_size`。
 
@@ -274,7 +274,7 @@ ALTER SYSTEM SET runtime_filter_type = 'BLOOM_FILTER,RANGE,IN'
 
 一般情况下，使用默认值指定的 Runtime Filter 类型即可，不需要使用 `runtime_filter_type` 变量特别指定。OceanBase 数据库会在优化和执行阶段选择最优的 Runtime Filter 类型进行过滤。
 
-`runtime_filter_max_in_num` 变量用于指定 In Filter 所使用的 NDV，默认值为 1024。优化器会估算 Build 表的 NDV，如果 `NDV > runtime_filter_max_in_num`，则不会分配 In Filter。这种情况下，虽然优化器估算并不一定准确，但是优化器将在执行期自动关闭 In filter。一般情况下，不建议用户将该值设置过大，因为在 Build 表 NDV 很大的情况下，In Filter 的优化效果不如 Bloom Filter。
+`runtime_filter_max_in_num` 变量用于指定 In Filter 所使用的 NDV，默认值为 1024。优化器会估算 Build 表的 NDV，如果 `NDV > runtime_filter_max_in_num`，则不会分配 In Filter。这种情况下，虽然优化器估算并不一定准确，但是执行器将在执行期自动关闭 In filter。一般情况下，不建议用户将该值设置过大，因为在 Build 表 NDV 很大的情况下，In Filter 的优化效果不如 Bloom Filter。
 
 `runtime_filter_wait_time_ms` 变量用于设置 Probe 端等待 Runtime Filter 到达的最长等待时间，默认值为 10 ms。Probe 端会等待 Runtime Filter 到达之后再吐数据，如果超过 `runtime_filter_wait_time_ms` 所设时间 Runtime Filter 还未到达，则会进入 By Pass 阶段，此时不经过 Runtime Filter 过滤直接开始吐数据，当之后的某个时刻 Runtime Filter 达到后，Runtime Filter 仍然会被启用并执行过滤。一般情况下，该值不需要调整，当实际使用的 Bloom Filter 数据很大时，并且过滤性比较好的情况下，可以适当调大该值。
 
