--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.runtime-filter.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/3.runtime-filter.md
@@ -8,7 +8,7 @@ Runtime Filter 是一种用于优化 Hash Join 性能的技术，它可以通过
 
 Runtime Filter 实际上是一个过滤器，它可以利用 Hash Join 的 Build 过程构建一个轻量的 Filter，然后将 Filter 广播发送给参与 Probe 的大表，Probe Table 可以使用多个 Runtime Filter 来提前在存储层过滤数据，减少真正参与 Hash Join 以及网络传输的数据，从而提高查询的效率。
 
-Runtime Filter 可以基于三个层面进行分类：基于是否需要跨机传输层面，Runtime Filter 可以分为 Local 和 Global 两类；基于 Runtime Filter 的数据结构层面，Runtime Filter 可以分为 Bloom Filter、In Filter 和 Range Filter 三类。无论是 Local Runtime Filter 还是 Global Runtime Filter，都可以使用这三种数据结构的 Runtime Filter；基于 Runtime Filter 过滤的实体层面，Runtime Filter 可以分为过滤上连接键和过滤分区两类，第一类为普通 Runtime Filter，第二类为 Part Join Filter。基于过滤的实体层面的分类和和基于需要跨机传输层面分类是正交的。普通 Runtime Filter 支持三种数据结构的 Runtime Filter，而 Part Join Filter 当前仅支持 Bloom Filter。
+Runtime Filter 可以基于三个层面进行分类：基于是否需要跨机传输层面，Runtime Filter 可以分为 Local 和 Global 两类；基于 Runtime Filter 的数据结构层面，Runtime Filter 可以分为 Bloom Filter、In Filter 和 Range Filter 三类。无论是 Local Runtime Filter 还是 Global Runtime Filter，都可以使用这三种数据结构的 Runtime Filter；基于 Runtime Filter 过滤的实体层面，Runtime Filter 可以分为过滤连接键和过滤分区两类，第一类为普通 Runtime Filter，第二类为 Part Join Filter。基于过滤的实体层面的分类和和基于需要跨机传输层面分类是正交的。普通 Runtime Filter 支持三种数据结构的 Runtime Filter，而 Part Join Filter 当前仅支持 Bloom Filter。
 
 本文将通过具体示例详细介绍 Local Runtime Filter、Global Runtime Filter 和 Part Join Filter。
 
@@ -162,7 +162,7 @@ obclient> EXPLAIN BASIC SELECT /*+ LEADING(a (b  c)) PARALLEL(3) USE_HASH(b) USE
 70 rows in set 
 ```
 
-上述示例中，5 号算子的 `NAME` 字段值对应 `RF0001`，11号算子对应 `RF000`，而被 Push Down 到 21 号的 `TABLE FULL SCAN` 算子横跨了多个 DFO 进行过滤，符合 Global Runtime Filter 的特征。
+上述示例中，5 号算子的 `NAME` 字段值对应 `RF0001`，11 号算子对应 `RF000`，而被 Push Down 到 21 号的 `TABLE FULL SCAN` 算子横跨了多个 DFO 进行过滤，符合 Global Runtime Filter 的特征。
 
 ### Part Join Filter
 
@@ -274,7 +274,7 @@ ALTER SYSTEM SET runtime_filter_type = 'BLOOM_FILTER,RANGE,IN'
 
 一般情况下，使用默认值指定的 Runtime Filter 类型即可，不需要使用 `runtime_filter_type` 变量特别指定。OceanBase 数据库会在优化和执行阶段选择最优的 Runtime Filter 类型进行过滤。
 
-`runtime_filter_max_in_num` 变量用于指定 In Filter 所使用的 NDV，默认值为 1024。优化器会估算 Build 表的 NDV，如果 `NDV > runtime_filter_max_in_num`，则不会分配 In Filter。这种情况下，虽然优化器估算并不一定准确，但是执行器将在执行期自动关闭 In filter。一般情况下，不建议用户将该值设置过大，因为在 Build 表 NDV 很大的情况下，In Filter 的优化效果不如 Bloom Filter。
+`runtime_filter_max_in_num` 变量用于指定 In Filter 所使用的 NDV，默认值为 1024。优化器会估算 Build 表的 NDV，如果 `NDV > runtime_filter_max_in_num`，则不会分配 In Filter。由于优化器估算 NDV 不一定准确，可能存在实际 NDV 很大但是估算较小导致误分配 In Filter 的情况，在这种情况下，执行器会在执行过程中会根据实际的DNV自适应关闭 In Filter。一般情况下，不建议用户将该值设置过大，因为在 Build 表 NDV 很大的情况下，In Filter 的优化效果不如 Bloom Filter。
 
 `runtime_filter_wait_time_ms` 变量用于设置 Probe 端等待 Runtime Filter 到达的最长等待时间，默认值为 10 ms。Probe 端会等待 Runtime Filter 到达之后再吐数据，如果超过 `runtime_filter_wait_time_ms` 所设时间 Runtime Filter 还未到达，则会进入 By Pass 阶段，此时不经过 Runtime Filter 过滤直接开始吐数据，当之后的某个时刻 Runtime Filter 达到后，Runtime Filter 仍然会被启用并执行过滤。一般情况下，该值不需要调整，当实际使用的 Bloom Filter 数据很大时，并且过滤性比较好的情况下，可以适当调大该值。
 
