--- a/zh-CN/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
+++ b/zh-CN/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
@@ -26,6 +26,6 @@ OceanBase 数据库基于 Paxos 协议实现了多副本容灾方案，对用户
 
 物理备库容灾是 OceanBase 数据库高可用解决方案的重要组成部分。
 
-物理备库容灾技术面向多个集群，多集群间传输事务日志，建立基于日志的物理热备服务。在 OceanBase 数据库 V4.2.0 版本中，物理备库采用独立的主备库架构，主备关系存在于租户级别，主备之间通过网络直连或第三方日志服务建立传输渠道，只传输日志。不同于以前版本的集中式架构，独立主备库架构下，各个集群是是相互独立的，没有任何直接通信，用户可以更加灵活地管理集群。
+物理备库容灾技术面向多个集群，多集群间传输事务日志，建立基于日志的物理热备服务。在 OceanBase 数据库 V4.2.0 版本中，物理备库采用独立的主备库架构，主备关系存在于租户级别，主备之间通过网络直连或第三方日志服务建立传输渠道，只传输日志。不同于以前版本的集中式架构，独立主备库架构下，各个集群是是相互独立的，用户可以更加灵活地管理集群。
 
-租户级主备由于异步同步日志，仅支持最大性能模式，不支持最大保护和最大可用模式，容灾切换时需要保证数据强一致的场景可以采用多副本技术容灾。
+租户级主备由于异步同步日志，仅支持最大性能模式，不支持最大保护和最大可用模式，容灾切换时需要保证数据强一致的场景可以采用多副本容灾方案或基于仲裁的容灾方案。
