--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-a-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-a-table-of-oracle-mode.md
@@ -230,8 +230,8 @@ SELECT * FROM GV$OB_LOCKS;
 | TYPE           | 锁类型：<ul><li>TM：表锁</li><li>TX：事务锁</li><li>TR：行锁</li></ul> |
 | ID1            | 锁标识符 1：<ul><li>表锁：可能是 TABLE_ID，也可能是 TABLET_ID</li><li>事务锁：TX_ID</li><li>行锁：TABLET_ID</li></ul> |
 | ID2            | 锁标识符 2：<ul><li>表锁：NULL</li><li>事务锁：NULL</li><li>行锁：TX_ID + 行 rowkey</li></ul> |
-| LMODE          | 当前持有锁的模式：<ul><li>NONE：表示未持有任何锁</li><li>NULL</li><li>SS：ROW SHARE</li><li>SX：ROW EXCLUSIVE</li><li>S：SHARE</li><li>SSX：SHARE ROW EXCLUSIVE</li><li>X：EXCLUSIVE</li></ul>       |
-| REQUEST        | 当前请求锁的模式：<ul><li>NONE：表示未请求任何锁</li><li>NULL</li><li>SS：ROW SHARE</li><li>SX：ROW EXCLUSIVE</li><li>S：SHARE</li><li>SSX：SHARE ROW EXCLUSIVE</li><li>X：EXCLUSIVE</li></ul>       |
+| LMODE          | 当前持有锁的模式：<ul><li>NONE：表示未持有任何锁</li><li>SS：ROW SHARE</li><li>SX：ROW EXCLUSIVE</li><li>S：SHARE</li><li>SSX：SHARE ROW EXCLUSIVE</li><li>X：EXCLUSIVE</li></ul>       |
+| REQUEST        | 当前请求锁的模式：<ul><li>NONE：表示未请求任何锁</li><li>SS：ROW SHARE</li><li>SX：ROW EXCLUSIVE</li><li>S：SHARE</li><li>SSX：SHARE ROW EXCLUSIVE</li><li>X：EXCLUSIVE</li></ul>       |
 | CTIME          | 持有或等待锁的时间，单位为秒                          |
 | BLOCK          | 表示锁是否在阻止其他进程：<ul><li>0：表示未阻止任何进程</li><li>1：表示正在阻止其他进程</li></ul>        |
 ## 更多信息
