--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/6.dynamic-sql-oracle/1.dynamic-sql-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/6.dynamic-sql-oracle/1.dynamic-sql-overview-oracle.md
@@ -12,16 +12,16 @@
 
 * 在程序编写的时候无法确定完整的 SQL 语句。
 
-  
-
 * PL 的静态 SQL 无法支​持的操作，例如 DDL。
-
-  
-
-
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
     <p>一般来说静态 SQL 可以提供更好的安全性和效率，所以尽量不要使用动态 SQL。</p>
   </main>
 
+
+OceanBase 数据库 PL 动态 SQL 在如下场景中支持 SQL 返回复杂数据类型：
+
+* 动态 SQL 执行 `SELECT` 语句
+​* ​动态 SQL 执行 DML 语句
+* `​EXECUTE IMMEDIATE` 通过 `USING` 子句 `OUT` 属性赋值
