--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/5.pl-static-sql-oracle/1.pl-static-sql-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/5.pl-static-sql-oracle/1.pl-static-sql-overview-oracle.md
@@ -10,43 +10,26 @@ PL 静态 SQL 支持直接在 PL 语句中使用 SQL 语法。
 
 一般情况下，PL 静态 SQL 语句与以下相应的 SQL 语句具有相同的语法：
 
-* `SELECT`（此语句也称为查询）
+* `SELECT`（此语句也称为查询） 
 
-  
-
-* 数据操作语言（DML）语句：` INSERT`、`UPDATE`、`DELETE` 和 `MERGE`。
-
-  
+* 数据操作语言（DML）语句：`INSERT`、`UPDATE`、`DELETE` 和 `MERGE`。
 
 * 事务控制语言（TCL）语句：`COMMIT`、`ROLLBACK`、`SAVEPOINT`、`SET TRANSACTION` 和 `LOCK TABLE`。
-
-  
-
-
-
 
 伪列的行为类似于表列，但未存储在表中。静态 SQL 包括以下 SQL 伪列：
 
 * `CURRVAL` 和 `NEXTVAL`
 
-  
-
 * `LEVEL`
-
-  
 
 * `OBJECT_VALUE`
 
-  
-
 * `ROWID`
-
-  
 
 * `ROWNUM`
 
-  
+OceanBase 数据库 PL 静态 SQL 在如下场景中支持 SQL 返回复杂数据类型：
 
-
-
-
+* `​SELECT INTO`/`BULK INTO​`
+* DML 语句中的 `RETURING INTO`/`BULK INTO`
+* `​FETCH INTO`/`BULK INTO`
