--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.functinal-constraints-and-precautions.md
@@ -2,12 +2,14 @@
 
 本节主要介绍物理备库功能的使用限制。
 
-| 限制项                         |   具体描述                                   |
-|-------------------------------|----------------------------------------------|
-| 备租户个数限制                  | 无限制                                       |
-| 主租户和备租户异构              | <ul><li>不支持主租户与备使用不同的租户资源规格。例如，使用不同的 CPU 或 Memory 配置，会有稳定性风险</li><li>不支持主租户与备租户使用不同的 `UNIT_NUM` 配置</li></ul>   |
-| 主备租户配置项修改是否同步       | 主租户与备租户的配置项相互独立，不会物理同步。如果修改了主租户的配置项，需要评估是否需要修改备租户的配置项  |
-| 主备租户系统变量修改是否同步     | 主租户修改系统变量后，备租户的系统变量会同步修改       |
-| 备租户操作                     | <ul><li>备租户支持强读或弱读，不支持写</li><li>备租户只能触发转储，不能触发合并，合并信息从主租户同步</li></ul>|
-| Switchover 限制                | <ul><li>备切主时，要求备租户所在集群的所有 Server 在线</li><li>备切主在切换前需要保证备租户已同步</li></ul>                        |
-| Failover 限制                  | 要求备租户所在集群的所有 Server 在线                                    |
+| 限制项                         |   具体描述                                                               |
+|-------------------------------|--------------------------------------------------------------------------|
+| 同一个主租户支持的最大备租户个数  | 无限制                                                                   |
+| 主租户和备租户是否要求资源同构    | 不要求同构。建议主租户和备租户使用相同的资源规格 。                          |
+| 配置项                         | 主租户与备租户的配置项相互独立，不会物理同步。如果修改了主租户的配置项，需要评估是否需要修改备租户的相同配置项。  |
+| 系统变量                       | 主租户和备租户的系统变量物理同步，如果在主租户上修改了系统变量，系统会同步修改备租户的相同系统变量。             |
+| 用户及用户密码                  | 仅支持在主租户上创建用户和修改用户密码，更新后信息会同步给备租户。                                            |
+| 读写操作                       | 备租户支持读操作，不支持写操作。                   |
+| 转储与合并                     | 主租户和备租户的转储相对独立。</br>备租户从主租户同步合并信息，不支持独立合并。                             |
+| Switchover 限制                | 要求备租户日志流的所有副本在线                        |
+| Failover 限制                  | 要求备租户日志流的所有副本在线                                    |
