--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.delete-a-primary-or-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.delete-a-primary-or-standby-tenant.md
@@ -1,6 +1,6 @@
 # 删除主备租户
 
-由于当前版本为独立租户级物理备库，备租户是通过 `RESTORE` 命令显式创建而来，故在删除租户时，主备租户都需要显示删除。
+在当前版本中，由于主备租户均为显式创建而来，故在删除租户时，主备租户均需要显示删除。
 
 ## 注意事项
 
@@ -10,13 +10,17 @@
   
   * 主租户的删除状态：如果系统租户开启了回收站功能，则删除的主租户会进入回收站，后续系统租户可以进一步清理或恢复该租户；如果系统租户未开启回收站功能，则主租户会直接被删除。
 
-  * 备租户的同步状态：如果主租户进入回收站，备租户的同步状态无影响，会继续同步日志；如果主租户直接被删除或者被系统租户从回收站中清理掉，备租户同步到主租户的删除或清理动作后，停止日志同步。
+  * 备租户的同步状态：如果主租户进入回收站，备租户的同步状态无影响，会继续同步日志；如果主租户直接被删除或者被系统租户从回收站中清理掉，备租户同步到主租户的删除或清理动作后，立即停止日志同步。
 
 * 通过 `DROP TENANT FORCE` 语句删除主租户
 
   * 主租户的删除状态：无论系统租户是否开启回收站功能，主租户均立刻被删除。
 
-  * 备租户的同步状态：备租户同步主租户所有已归档日志后，停止日志同步。
+  * 备租户的同步状态：
+  
+    * 对于基于日志归档的物理备库场景，备租户同步主租户所有已归档的日志后，停止日志同步。
+
+    * 对于基于网络的物理备库场景，备租户在主租户被删除后立即停止日志同步。
 
 ## 操作步骤
 
