--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
@@ -92,10 +92,18 @@ OceanBase 数据库的 `DBMS_XPLAN` 系统包用于查询逻辑执行计划，`(
    +--------------------------------------------------------------------------------------------------------------------+
    ```
 
-此外，`(G)V$OB_SQL_PLAN` 视图用于查询当前租户所有（当前）节点的执行计划，但推荐使用 `DBMS_XPLAN` 系统包查看执行计划。`(G)V$OB_SQL_PLAN` 视图的查询定义如下：
+此外，`GV$OB_SQL_PLAN`（或 `V$OB_SQL_PLAN`） 视图用于查询当前租户所有（或当前）节点的执行计划，但推荐使用 `DBMS_XPLAN` 系统包查看执行计划。
+
+`GV$OB_SQL_PLAN` 视图的查询定义如下：
 
 ```sql
-VIEW_DEFINITION='SELECT * FROM oceanbase.(G)V$OB_SQL_PLAN WHERE SVR_IP=HOST_IP() AND SVR_PORT=RPC_PORT()'
+VIEW_DEFINITION='SELECT * FROM oceanbase.GV$OB_SQL_PLAN WHERE TENANT_ID = effective_tenant_id()'
+```
+
+`V$OB_SQL_PLAN` 视图的查询定义如下：
+
+```sql
+VIEW_DEFINITION='SELECT * FROM oceanbase.V$OB_SQL_PLAN WHERE SVR_IP=host_ip() AND SVR_PORT=rpc_port()'
 ```
 
 `(G)V$OB_SQL_PLAN` 视图相关字段解释如下表所示。
@@ -157,10 +165,10 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.(G)V$OB_SQL_PLAN WHERE SVR_IP=HOST_IP()
 
 OceanBase 数据库每个服务器的计划缓存都是独立的。用户可以直接访问 `V$OB_PLAN_CACHE_PLAN_STAT` 视图查询本服务器上的计划缓存并提供 `tenant_id` 和需要查询的 SQL 字符串（可以使用模糊匹配），查询该条 SQL 在计划缓存中对应的 `plan_id`，并进一步展示该 SQL 在计划缓存中的物理执行计划。
 
-`GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 视图的查询定义如下：
+`V$OB_PLAN_CACHE_PLAN_EXPLAIN` 视图的查询定义如下：
 
 ```sql
-VIEW_DEFINITION='SELECT * FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE SVR_IP = host_ip() AND SVR_PORT = rpc_port()'
+VIEW_DEFINITION='SELECT * FROM oceanbase.V$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE TENANT_ID = tenant_id() AND PLAN_ID = plan_id()'
 ```
 
 本文通过具体示例展示如何使用 `V$OB_PLAN_CACHE_PLAN_EXPLAIN` 视图查询物理执行计划。
@@ -173,10 +181,10 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE SVR
           tenant_id: 1001
              svr_ip:xx.xx.xx.xx
            svr_port:15212
-            plan_id: 7
+            plan_id:7
              sql_id:0
-               type: 1
-         s tatement: insert into t1 values(1)
+               type:1
+          statement:insert into t1 values(1)
           plan_hash:1
    last_active_time:2016-05-28 19:08:57.416670
        avg_exe_usec:0
@@ -188,7 +196,7 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE SVR
    1 row in set 
    ```
 
-2. 获得 `plan_id` 后，用户可以使用 `tenant_id` 和 `plan_id` 访问 `GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 视图查询执行计划相关信息。
+2. 获得 `plan_id` 后，用户可以使用 `tenant_id` 和 `plan_id` 访问 `V$OB_PLAN_CACHE_PLAN_EXPLAIN` 视图查询执行计划相关信息。
 
    <main id="notice" type='notice'>
      <h4>注意</h4>
@@ -196,7 +204,7 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE SVR
    </main>
 
     ```shell
-    obclient> SELECT * FROM GV$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE tenant_id = 1001 AND plan_id = 7;                        
+    obclient> SELECT * FROM V$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE tenant_id = 1001 AND plan_id = 7;                        
    +-----------+---------------+-------+---------+--------------------+------+------+------+
    | TENANT_ID | IP            | PORT  | PLAN_ID | OPERATOR           | NAME | ROWS | COST |
    +-----------+---------------+-------+---------+--------------------+------+------+------+
@@ -207,19 +215,10 @@ VIEW_DEFINITION='SELECT * FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN WHERE SVR
    3 rows in set 
    ```
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <ul>
-    <li>如果访问 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code>，必须给定 IP、Port、<code>tenant_id</code> 和 <code>plan_id</code> 这四列的值。</li>
-    <li>如果访问 <code>V$OB_PLAN_CACHE_PLAN_EXPLAIN</code>，必须给定 <code>tenant_id</code> 和 <code>plan_id</code> 的值，否则系统将返回空集。</li>
-    </ul>
-  </main>
-
-
 
 ## 实时 SQL Plan Monitor
 
-OceanBase 数据库 V4.0 版本开始支持实时 SQL Plan Monitor 功能，即用户可以通过查询 `GV$SQL_PLAN_MONITOR` 租户级视图获取执行计划相关信息，包括逻辑执行计划、物理执行计划、算子吐行数、算子开始/结束时间点以及各个执行线程执行算子的执行状态等。
+OceanBase 数据库 V4.0 版本开始支持实时 SQL Plan Monitor 功能，即用户可以通过查询 `GV$SQL_PLAN_MONITOR` 租户级视图获取执行计划相关信息，包括逻辑执行计划、物理执行计划、算子吐行数、算子开始和结束时间点以及各个执行线程执行算子的执行状态等。
 
 `GV$SQL_PLAN_MONITORSQL_PLAN_MONITOR` 视图的 `OTHERSTAT_?_ID` 和 `OTHERSTAT_?_VALUE` 字段用于记录算子特有的性能数据，目前一共有 10 个。每个字段实际记录数据的名字，通过一个 ID 表示，ID 对应的具体含义，则需要通过 `V$SQL_MONITOR_STATNAME` 视图查询。
 
