--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.tenant-performance-monitoring.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.tenant-performance-monitoring.md
@@ -27,7 +27,7 @@
 
 6. 切换页签，分别查看集群的 **性能与 SQL** 、 **事务** 、 **存储与缓存** 的性能监控数据。
 
-   * 单击 **性能与 SQL** 页签，查看 SQL 执行相关的性能，包括 QPS、响应时间、会话数、SQL 执行次数、等待事件、等待时间耗时、请求等待队列、请求等待队列耗时、租户 CPU 消耗、内存使用率、MEMStore 使用百分比、Rpc 包耗时、Rpc 包吞吐量、打开的游标数、clog 同步延迟 和 SQL 执行时间。
+   * 单击 **性能与 SQL** 页签，查看 SQL 执行相关的性能，包括 QPS、响应时间、会话数、SQL 执行次数、等待事件、等待时间耗时、请求等待队列、请求等待队列耗时、租户 CPU 消耗、内存使用率、MemStore 使用百分比、Rpc 包耗时、Rpc 包吞吐量、打开的游标数、clog 同步延迟 和 SQL 执行时间。
 
    * 单击 **事务** 页签，查看事务相关的性能，包括 TPS、事务响应时间、事务日志数、事务日志量、事务日志耗时、事务锁等待次数、事务锁平均等待时间、事务数量和事务响应时间明细。
 
