--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/40.gv-server_schema_info-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/40.gv-server_schema_info-of-mysql-mode.md
@@ -20,7 +20,7 @@ GV$OB_SERVER_SCHEMA_INFO
 | RECEIVED_SCHEMA_VERSION    | bigint(20)  | NO             | 租户应该要刷新的 Schema 版本               |
 | SCHEMA_COUNT               | bigint(20)  | NO             | 租户的 Schema 数量                    |
 | SCHEMA_SIZE                | bigint(20)  | NO             | 租户的 Schema 大小                    |
-| MIN_SSTABLE_SCHEMA_VERSION | bigint(20)  | NO             | 租户 Sstable 上记录的最小 schema_version |
+| MIN_SSTABLE_SCHEMA_VERSION | bigint(20)  | NO             | 租户 SSTable 上记录的最小 schema_version |
 
 
 
