--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
@@ -524,7 +524,7 @@ ERROR 6277 (HY000) : scn is out of bounds of memtable
 
 * OceanBase 错误码：6277
 
-* 错误原因：MEMTable 设置 SCN 时超过其边界限制。
+* 错误原因：MemTable 设置 SCN 时超过其边界限制。
 
 * 解决方法：内部错误码。若回显为 ERROR，请联系技术支持人员协助排查；若回显为 WARN，则表示正常 。
 
