--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/4.create-a-standby-tenant-by-backup-database-plus-archivelog.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/4.create-a-standby-tenant-by-backup-database-plus-archivelog.md
@@ -51,7 +51,7 @@
         ALTER SYSTEM ARCHIVELOG;
         ```
 
-      开启归档模式的详细操作，请参见 [开启归档模式](../../6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md)。
+      开启归档模式的详细操作，请参见 [开启归档模式](../../../6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md)。
 
    3. 确认归档状态是否为 `DOING`。
 
