--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/2.view-a-dblink-of-oracle-mode.md
@@ -1,16 +1,14 @@
 # 查看已创建的 DBLink
 
-创建 DBLink 后，可以通过 `GV$DBLINK` 视图来查看已创建的 DBLink 信息。
+创建 DBLink 后，可以通过视图来查看已创建的 DBLink 信息。
 
 ## 操作步骤
 
 DBLink 创建成功后，可以通过 `DBA_DB_LINKS`、`ALL_DB_LINKS`、`USER_DB_LINKS` 等视图查看已创建的 DBLink。
 
 ```sql
-SELECT * FROM USER_DB_LINKS;
+SELECT * FROM SYS.USER_DB_LINKS;
 ```
-
-查询结果如下：
 
 查询结果如下。
 
