--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
@@ -24,7 +24,7 @@
 
 * 通过 DBLink 向远端数据库写入数据的操作完成后，需要手动使用 `COMMIT` 或者 `ROLLBACK` 语句提交回滚本地和远端的 XA 事务。
   
-  更多事务控制语句的详细说明信息，参见 [事务管理概述](../../../../../3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
+  更多事务控制语句的详细说明信息，参见 [事务管理概述](../../../../../3.develop/6.transaction-in-develop/2.transaction-in-develop-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
 
 * 通过 DBLink 向远端数据库写入数据时，暂不支持通过设置 `autocommit = True` 来开启事务的自动提交，并且通过 DBLink 写入数据的操作一旦开启 XA 事务，系统就会将本 Session 的 `autocommit` 值强制置为 `False`，直到 XA 事务提交或者回滚后，才会恢复 `autocommit` 原本的值。
 
@@ -78,7 +78,7 @@ obclient> SELECT * FROM t1@ob_dblink;
 2 rows in set
 ```
 
-通过 DBLink 向远端数据库的表中插入数据的操作与直接向表中插入数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关向表中插入数据的详细操作，可参见 [插入数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md)。
+通过 DBLink 向远端数据库的表中插入数据的操作与直接向表中插入数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关向表中插入数据的详细操作，请参见 [插入数据](../../../../../3.develop/4.write-data/2.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md)。
 
 更多 `INSERT` 语句的详细使用及说明，请参见 [INSERT](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
 
@@ -126,7 +126,7 @@ obclient> SELECT * FROM t2@ob_dblink;
 1 rows in set
 ```
 
-通过 DBLink 更新远端数据库中表数据的操作与直接更新表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关更新表数据的详细操作，可参见 [更新数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md)。
+通过 DBLink 更新远端数据库中表数据的操作与直接更新表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关更新表数据的详细操作，可参见 [更新数据](../../../../../3.develop/4.write-data/2.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md)。
 
 更多 `UPDATE` 语句的详细使用及说明，请参见 [UPDATE](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/6.update-of-oracle-mode.md)。
 
@@ -202,7 +202,7 @@ obclient> SELECT * FROM t3@orcl_dblink;
 4 row in set
 ```
 
-通过 DBLink 替换远端数据库中表数据的操作与直接替换数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关替换表数据的详细操作，可参见 [替换数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md)。
+通过 DBLink 替换远端数据库中表数据的操作与直接替换数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关替换表数据的详细操作，可参见 [替换数据](../../../../../3.develop/4.write-data/2.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md)。
 
 更多 `MERGE INTO` 语句的详细使用及说明，请参见 [MERGE](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md)。
 
@@ -247,7 +247,7 @@ obclient> SELECT * FROM t5@orcl_dblink;
 1 row in set
 ```
 
-通过 DBLink 删除远端数据库的表数据的操作与直接删除表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关删除表数据的详细操作，可参见 [删除数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md)。
+通过 DBLink 删除远端数据库的表数据的操作与直接删除表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关删除表数据的详细操作，可参见 [删除数据](../../../../../3.develop/4.write-data/2.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md)。
 
 更多 `DELETE` 语句的详细使用及说明，请参见 [DELETE](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/1.delete-of-oracle-mode.md)。
 
