--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -5,7 +5,7 @@
 <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
 </main>
 
-您可以在创建租户时即为租户开启仲裁服务，创建租户并开启仲裁服务的相关操作请参见 [创建租户](../../2.tenant-management/6.common-tenant-operations/2.create-tenant.md)。如果未开启仲裁服务，也可以待租户创建成功后，为租户开启仲裁服务。本节主要介绍如何为已有租户开启仲裁服务。
+您可以在创建租户时即为租户开启仲裁服务，创建租户并开启仲裁服务的相关操作请参见 [创建租户](../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。如果未开启仲裁服务，也可以待租户创建成功后，为租户开启仲裁服务。本节主要介绍如何为已有租户开启仲裁服务。
 
 ## 前提条件
 
@@ -28,7 +28,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行以下命令，查看集群中各节点的联通状态。
 
@@ -119,7 +119,7 @@
    ALTER TENANT oracle001 ENABLE_ARBITRATION_SERVICE = true;
    ```
 
-5. 命令执行成功后，再次查询 `oceanbase.DBA_OB_TENANTS` 视图来确认租户的仲裁服务是否已开启。
+5. 命令执行成功后，再次查询 `DBA_OB_TENANTS` 视图来确认租户的仲裁服务是否已开启。
 
    ```sql
    SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_name = 'oracle001'\G
