--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -127,6 +127,6 @@ opt_set_sys_var:
 
 租户创建成功后，默认其管理员用户（MySQL 模式为 `root`，Oracle 模式为 `sys`）的密码为空，您可以使用 `obclient -h10.10.10.1 -P2883 -uusername@tenantname#clustername -p -A` 语句登录数据库后，修改管理员用户的密码。修改用户密码的操作请参见 [修改用户密码（Oracle 模式）](9.manage-users-and-permissions/2.oracle-mode/6.change-user-password-of-oracle-mode.md)和 [修改用户密码（MySQL 模式）](9.manage-users-and-permissions/3.mysql-mode/6.change-user-password-of-mysql-mode.md)。
 
-有关连接数据库的更多示例及操作，请参见 [连接数据库](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+有关连接数据库的更多示例及操作，请参见 [连接数据库概述（MySQL 模式）](../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 此外，如果需要使用普通用户登录，则需要为租户创建新的普通用户并授权，创建用户并授权的相关操作请参见 [管理用户和权限](9.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md) 章节。
