--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 权限要求
 
-创建外表需要当前用户拥有 `CREATE` 权限，查看当前用户权限的操作请参见 [查看用户权限](../../../../2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `CREATE` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+创建外表需要当前用户拥有 `CREATE` 权限，查看当前用户权限的操作请参见 [查看用户权限](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `CREATE` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 创建外表
 
@@ -139,7 +139,7 @@ FORMAT = (
    obclient -h10.xx.xx.xx -P2881 -uxxx@xxx -p***** -A
    ```
 
-   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)。
+   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)。
 
 2. 配置数据库可以访问的路径 `/home/admin/`。
 
