--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 ## 权限要求
 
-创建外表需要当前用户拥有 `CREATE TABLE` 权限，查看当前用户权限的操作请参见 [查看用户权限](../2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果您没有 `CREATE TABLE` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+创建外表需要当前用户拥有 `CREATE TABLE` 权限，查看当前用户权限的操作请参见 [查看用户权限](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md)。如果您没有 `CREATE TABLE` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md)。
 
 ## 创建外表
 
@@ -36,7 +36,7 @@ FORMAT = (
 
 * `col_name col_type [AS (metadata$filecol{N})]`：用于定义列。其中，`AS (metadata$filecol{N})` 用于手动定义列映射。
 
-  外表支持的列类型与普通表一致，OceanBase 数据库 MySQL 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
+  外表支持的列类型与普通表一致，OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
 
   默认情况下，外部文件中的数据列与外表定义的列是自动按顺序对应的，即外表的第一列对应外部文件中第一列的数据。
   
@@ -139,7 +139,7 @@ FORMAT = (
    obclient -h10.xx.xx.xx -P2881 -uroot@sys -p***** -A
    ```
    
-   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md)。
+   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md)。
 
 2. 配置数据库可以访问的路径 `/home/admin/`。
 
