--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/4.create-a-standby-tenant-by-backup-database-plus-archivelog.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/4.create-a-standby-tenant-by-backup-database-plus-archivelog.md
@@ -57,13 +57,19 @@
 
       主租户通过查询 `DBA_OB_ARCHIVELOG` 视图（系统租户查询 `CDB_OB_ARCHIVELOG` 视图）确认归档状态的语句如下：
 
-      * MySQL 模式
+      * 系统租户
+
+         ```sql
+         SELECT DEST_ID, ROUND_ID, DEST_NO, STATUS, CHECKPOINT_SCN, CHECKPOINT_SCN_DISPLAY, PATH FROM oceanbase.CDB_OB_ARCHIVELOG;
+         ```
+
+      * MySQL 租户
 
         ```sql
         ELECT DEST_ID, ROUND_ID, DEST_NO, STATUS, CHECKPOINT_SCN, CHECKPOINT_SCN_DISPLAY, PATH FROM oceanbase.DBA_OB_ARCHIVELOG;
         ```
 
-      * Oracle 模式
+      * Oracle 租户
 
         ```sql
         SELECT DEST_ID, ROUND_ID, DEST_NO, STATUS, CHECKPOINT_SCN, CHECKPOINT_SCN_DISPLAY, PATH FROM SYS.DBA_OB_ARCHIVELOG;
@@ -130,29 +136,41 @@
 
       主租户下通过 `DBA_OB_BACKUP_JOBS` 视图（系统租户查询 `CDB_OB_BACKUP_JOBS` 视图）查询数据备份进度的 SQL 语句如下：
 
-      * MySQL 模式
+      * 系统租户
+
+        ```sql
+        SELECT * FROM oceanbase.CDB_OB_BACKUP_JOBS;
+        ```
+
+      * MySQL 租户
 
         ```sql
         SELECT * FROM oceanbase.DBA_OB_BACKUP_JOBS;
         ```
 
-      * Oracle 模式
+      * Oracle 租户
 
         ```sql
         SELECT * FROM SYS.DBA_OB_BACKUP_JOBS;
         ```
 
-      如果备份正在执行，则该视图中会显示备份任务的进度信息。查看数据备份进度的详细操作，请参见 [查看数据备份进度](6.manage\6.backup-and-recovery\4.data-backup\5.view-data-backup-progress.md)。
+      如果备份正在执行，则该视图中会显示备份任务的进度信息。查看数据备份进度的详细操作，请参见 [查看数据备份进度](../../../6.backup-and-recovery/4.data-backup/5.view-data-backup-progress.md)。
 
       如果备份已完成，可以通过 `DBA_OB_BACKUP_JOB_HISTORY` 视图（系统租户查询 `CDB_OB_BACKUP_JOB_HISTORY` 视图）进一步查询数据备份历史。
 
-      * MySQL 模式
+      * 系统租户
+
+        ```sql
+        SELECT * FROM oceanbase.CDB_OB_BACKUP_JOB_HISTORY;
+        ```
+
+      * MySQL 租户
 
         ```sql
         SELECT * FROM oceanbase.DBA_OB_BACKUP_JOB_HISTORY;
         ```
 
-      * Oracle 模式
+      * Oracle 租户
 
         ```sql
         SELECT * FROM SYS.DBA_OB_BACKUP_JOB_HISTORY;
@@ -215,7 +233,7 @@
    CREATE RESOURCE UNIT unit1 MAX_CPU 1, MEMORY_SIZE = '2G';
    ```
 
-   有关 Unit 规格的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.create-tenant.md)。
+   有关 Unit 规格的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
 3. 创建备租户所需的资源池。
 
@@ -225,7 +243,7 @@
    CREATE RESOURCE POOL pool_for_standby UNIT = 'unit1', UNIT_NUM = 1, ZONE_LIST = ('zone1','zone2','zone3');
    ```
 
-    有关资源池的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.create-tenant.md)。
+   有关资源池的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
 4. 从主租户的数据库快照中恢复出备租户。
 
