--- a/zh-CN/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
+++ b/zh-CN/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
@@ -35,7 +35,7 @@
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
 2. 执行 `SHOW RECYCLEBIN` 语句，获取回收站中对象的名称。
 
