--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md
@@ -96,7 +96,7 @@ CREATE TABLE dup_t1 (c1 NUMBER,c2 NUMBER) DUPLICATE_SCOPE= 'cluster';
 当某个租户的第一个复制表被创建时，系统会同时创建一个特殊的日志流——广播日志流。之后新建的复制表都会创建到广播日志流上。广播日志流与普通日志流的不同之处在于，广播日志流会自动地在租户内的每个 OBServer 节点上都部署一个副本，保证在理想情况下，复制表可以在任意一个 OBServer 节点上提供强一致性读。您可以通过以下 SQL 查看租户的复制表所在的广播日志流：
 
 ```sql
-SELECT * FROM sys.DBA_OB_LS WHERE flag LIKE "%DUPLICATE%";
+SELECT * FROM SYS.DBA_OB_LS WHERE flag LIKE "%DUPLICATE%";
 ```
 
 查询结果的示例如下。
