--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/2.create-an-empty-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/2.create-an-empty-standby-tenant.md
@@ -26,7 +26,7 @@
 
 * `DBA_OB_TENANTS`：获取主租户的兼容模式。
 
-  关于 `DBA_OB_TENANTS` 视图的更多介绍，请参见 [DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+  关于 `DBA_OB_TENANTS` 视图的更多介绍，请参见 [DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
   
 * `DBA_OB_LS`: 获取主租户的日志流列表以及日志流状态。
 
@@ -123,7 +123,7 @@
    CREATE RESOURCE UNIT unit1 MAX_CPU 1, MEMORY_SIZE = '2G';
    ```
 
-   有关 Unit 规格的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.create-tenant.md)。
+   有关 Unit 规格的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
 3. 创建备租户所需的资源池。
 
@@ -133,7 +133,7 @@
    CREATE RESOURCE POOL pool_for_standby UNIT = 'unit1', UNIT_NUM = 1, ZONE_LIST = ('zone1','zone2','zone3');
    ```
 
-    有关资源池的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.create-tenant.md)。
+    有关资源池的详细创建操作，请参见 [创建租户](../../../2.tenant-management/6.common-tenant-operations/2.manage-create-tenant.md)。
 
 4. 执行以下命令，创建空备租户。
 
