--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/68.balancer_idle_time.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/68.balancer_idle_time.md
@@ -16,11 +16,23 @@
 | 默认值 | 5m，表示 5 分钟 |
 | 取值范围 | [10s, +∞) |
 | 是否重启 OBServer 节点生效 | 否 |
+
 **示例**
 
-```sql
---设置所有的间隔都为10s：
-alter system set balancer_idle_time = '10s' tenant = ALL;
---设置某个租户的时间间隔为10分钟：
-alter system set balancer_idle_time = '10m' tenant = 'tenant_name';
-```
+* 例如在 SYS 租户下设置所有租户的控制容灾线程和均衡线程的时间间隔为 10s。
+
+  ```sql
+  alter system set balancer_idle_time = '10s' tenant = ALL;
+  ```
+
+* 例如在 SYS 租户下设置 tenant1 的时间间隔为 10 分钟。
+
+  ```sql
+  alter system set balancer_idle_time = '10m' tenant = 'tenant1';
+  ```
+
+* 例如在用户租户下设置间隔为 10 分钟。
+
+  ```sql
+  alter system set balancer_idle_time = '10m';
+  ```
