--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/68.balancer_idle_time.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/68.balancer_idle_time.md
@@ -19,19 +19,19 @@
 
 **示例**
 
-* 例如在 SYS 租户下设置所有租户的控制容灾线程和均衡线程的时间间隔为 10s。
+* 在 SYS 租户下设置所有租户的控制容灾线程和均衡线程的时间间隔为 10s。
 
   ```sql
   alter system set balancer_idle_time = '10s' tenant = ALL;
   ```
 
-* 例如在 SYS 租户下设置 tenant1 的时间间隔为 10 分钟。
+* 在 SYS 租户下设置 tenant1 的时间间隔为 10 分钟。
 
   ```sql
   alter system set balancer_idle_time = '10m' tenant = 'tenant1';
   ```
 
-* 例如在用户租户下设置间隔为 10 分钟。
+* 在用户租户下设置间隔为 10 分钟。
 
   ```sql
   alter system set balancer_idle_time = '10m';
