--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/9.full-link-detection/4.full-link-tracking-display.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/9.full-link-detection/4.full-link-tracking-display.md
@@ -34,7 +34,13 @@ OCP 提供了多种检索维度，例如按耗时检索、按指定 Trace ID 或
 
 如下示例展示了两个分布式并行执行任务（px_task）的执行情况。若要查看链路有关的日志信息，请参见 [基于 Trace 功能查找上一次 SQL 请求日志](https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001702462)。
 
-1. 手动执行需要查询的 SQL 语句。
+1. 打开 SQL Trace 功能。
+
+    ```sql
+    obclient [test]>SET ob_enable_show_trace = 1;
+    ```
+
+2. 手动执行需要查询的 SQL 语句。
 
     ```sql
     obclient [test]>select/*+parallel(2)*/ count(*) from t1;
@@ -46,7 +52,7 @@ OCP 提供了多种检索维度，例如按耗时检索、按指定 Trace ID 或
     1 row in set (0.005 sec)
     ```
 
-2. 通过 SHOW TRACE 语句查看该语句的执行调用链路情况以及链路中各阶段的耗时情况。
+3. 通过 SHOW TRACE 语句查看该语句的执行调用链路情况以及链路中各阶段的耗时情况。
 
     ```sql
     obclient [test]>show trace;
