--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/18.major_compact_trigger.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/18.major_compact_trigger.md
@@ -1,7 +1,7 @@
 # major_compact_trigger 
 
 
-`major_compact_trigger` 用于设置多少次小合并触发一次全局合并。
+`major_compact_trigger` 用于设置多少次转储触发一次全局合并。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
