--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
@@ -303,7 +303,7 @@
 |------------------------------------------------------------------------------|----------------------|
 | [default_progressive_merge_num](4.tenant-level-configuration-items/14.default_progressive_merge_num.md) | 用于设置新建一张表时默认的渐进合并次数。 |
 | [major_freeze_duty_time](4.tenant-level-configuration-items/48.major_freeze_duty_time.md)              | 用于设置每日定时冻结和合并的触发时刻。                 |
-| [major_compact_trigger](4.tenant-level-configuration-items/18.major_compact_trigger.md)         | 用于设置多少次小合并触发一次全局合并。  |
+| [major_compact_trigger](4.tenant-level-configuration-items/18.major_compact_trigger.md)         | 用于设置多少次转储触发一次全局合并。  |
 | [minor_compact_trigger](4.tenant-level-configuration-items/22.minor_compact_trigger.md)         | 用于控制分层转储触发向下一层下压的阈值。 |
 | [undo_retention](4.tenant-level-configuration-items/49.undo_retention.md)                  | 用于设置系统应保留的多版本数据范围，单位为秒，在转储时控制多版本数据的回收。                                        |
 | [merger_check_interval](4.tenant-level-configuration-items/53.merger_check_interval.md)               | 用于设置合并状态检查线程的调度间隔。                  |
