--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/18.major_compact_trigger.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/18.major_compact_trigger.md
@@ -1,7 +1,7 @@
 major_compact_trigger 
 ==========================================
 
-major_compact_trigger 用于设置多少次小合并触发一次全局合并。
+major_compact_trigger 用于设置多少次转储触发一次全局合并。
 
 
 |      **属性**      |    **描述**    |
@@ -13,4 +13,4 @@ major_compact_trigger 用于设置多少次小合并触发一次全局合并。
 
 
 
-当 major_compact_trigger 配置项的取值为 0 时，表示关闭小合并。
+当 major_compact_trigger 配置项的取值为 0 时，表示无论转储多少次也不会触发合并。
