--- a/zh-CN/6.manage/9.performance-tuning/4.sql-tuning/2.execution-plan-optimization/1.statistics-and-cost-based-optimization/2.statistic-information/2.collect-statistic-information/2.manually-collect-statistic-information.md
+++ b/zh-CN/6.manage/9.performance-tuning/4.sql-tuning/2.execution-plan-optimization/1.statistics-and-cost-based-optimization/2.statistic-information/2.collect-statistic-information/2.manually-collect-statistic-information.md
@@ -1,10 +1,15 @@
 # 手动统计信息收集
 
-目前 OcenaBase 数据库优化器针对手动统计信息收集提供了两种方式：`DMBS_STATS`（推荐）、`ANALYZE` 命令行；推荐使用 `DMBS_STATS` 系统包进行手动统计信息收集，因为 `DMBS_STATS` 系统包支持的功能会更加丰富。
+目前 OcenaBase 数据库优化器针对手动统计信息收集提供了两种方式：`DBMS_STATS`（推荐）、`ANALYZE` 命令行；推荐使用 `DBMS_STATS` 系统包进行手动统计信息收集，因为 `DBMS_STATS` 系统包支持的功能会更加丰富。
 
-## DMBS_STATS 系统包统计信息收集
+## DBMS_STATS 系统包统计信息收集
 
-在 OcenaBase 数据库 V4.0 版本中，不管是 Oracle 模式还是 MySQL 模式都可以使用 `DMBS_STATS` 系统包进行手动统计信息收集，其中最常用的两个系统包的 PROCEDURE 是：`GATHER_TABLE_STATS` 和 `GATHER_SCHEMA_STATS`，前者用于收集某张表的统计信息，后者用于收集某个库中所有表的统计信息。下边展示了两个 PROCEDURE 的基本定义。
+在 OcenaBase 数据库 V4.0 版本中，不管是 Oracle 模式还是 MySQL 模式都可以使用 `DBMS_STATS` 系统包进行手动统计信息收集，其中最常用的两个系统包的 PROCEDURE 是：`GATHER_TABLE_STATS` 和 `GATHER_SCHEMA_STATS`，前者用于收集某张表的统计信息，后者用于收集某个库中所有表的统计信息。下边展示了两个 PROCEDURE 的基本定义。
+
+<main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>有关 `DBMS_STATS` 系统包的详细信息，参见 [DBMS_STATS 概述（MySQL 模式）](../../../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/159.dbms-stats-mysql/1.dbms-stats-overview-mysql.md) 和 [DBMS_STATS 概述（Oracle 模式）](../../../../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/159.dbms-stats-oracle/1.dbms-stats-overview-oracle.md)。</p>
+</main>
 
 ```
 PROCEDURE gather_table_stats (
@@ -155,19 +160,19 @@ column_name
 **示例一：收集用户 `TEST` 的表 `T1` 的统计信息，所有列的桶个数设定为 128**
 
 ```
-analyze table T1 compute statistics for all columns size 128;
+obclient> ANALYZE TABLE T1 COMPUTE STATISTICS FOR ALL COLUMNS SIZE 128;
 ```
 
 **示例二：收集用户 `TEST` 的表 `T_PART1` 的 GLOBAL 级别的统计信息, 只收集数据分布不均匀的列的直方图**
 
 ```
-analyze table T_PART1 partition('T_PART1') compute statistics for all columns size skewonly;
+obclient> ANALYZE TABLE T_PART1 PARTITION('T_PART1') COMPUTE STATISTICS FOR ALL COLUMNS SIZE skewonly;
 ```
 
 **示例三：收集用户 `TEST` 的表 `T_SUBPART1` 的分区 `p0sp0,p1ps2` 的统计信息, 所有的列的直方图都由优化器内部决定**
 
 ```
-analyze table T_SUBPART1 subpartition('p0sp0','p1ps2') compute statistics for all columns size auto;
+obclient> ANALYZE TABLE T_SUBPART1 SUBPARTITION('p0sp0','p1ps2') COMPUTE STATISTICS FOR ALL COLUMNS SIZE auto;
 ```
 
 需要注意的是上述 `ANALYZE` 语法在 MySQL 模式执行的时候需要打开系统变量 `enable_sql_extension`，由于原生 MySQL 没有这种语法，因此需要在扩展模式执行。
@@ -175,8 +180,8 @@ analyze table T_SUBPART1 subpartition('p0sp0','p1ps2') compute statistics for al
 **示例四：在 MySQL 模式使用上述语法收集用户 `TEST` 的表 `T1` 的统计信息，所有列的桶个数设定为 128**
 
 ```
-alter system set enable_sql_extension = true;
-analyze table T1 compute statistics for all columns size 128;
+obclient> ALTER SYSTEM SET enable_sql_extension = true;
+obclient> ANALYZE TABLE T1 COMPUTE STATISTICS FOR ALL COLUMNS SIZE 128;
 ```
 
 当然，目前 OceanBase 数据库优化器也兼容了原生 MySQL 的 `ANALYZE` 语法，具体语法如下：
@@ -189,3 +194,8 @@ ANALYZE TABLE table_name UPDATE HISTOGRAM ON column_name_list WITH INTNUM BUCKET
 ## 总结
 
 除了上述常用的两个系统包的 PROCEDURE 收集统计信息以外，`DMBS_STATS` 系统包也提供了 `GATHER_INDEX_STATS` 用于收集索引统计信息、`GATHER_DATABASE_STATS_JOB_PROC` 来收集整个租户所有库的表的统计信息。
+
+## 相关文档
+
+* [PL 语法结构（MySQL 模式）](../../../../../../../7.reference/4.development-reference/3.pl-reference/2.pl-mysql/1.basic-syntax-mysql.md)
+* [PL 语法结构（Oracle 模式）](../../../../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/1.pl-language-basics-oracle/)
