--- a/zh-CN/6.manage/9.performance-tuning/3.identify-bottlenecks-within-components/3.performance-bottlenecks-of-observer/3.hard-parsing.md
+++ b/zh-CN/6.manage/9.performance-tuning/3.identify-bottlenecks-within-components/3.performance-bottlenecks-of-observer/3.hard-parsing.md
@@ -22,3 +22,10 @@
 可以通过以下方式解决：
 
 * 调大计划缓存的大小
+
+   系统变量 `ob_plan_cache_percentage` 用于设置计划缓存可使用内存占租户内存的百分比。计划缓存最多可使用内存（内存上限绝对值）= 租户内存上限 * `ob_plan_cache_percentage`/100，默认值为 5。
+
+## 相关文档
+
+* [ob_plan_cache_percentage](../../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/86.ob_plan_cache_percentage-global.md)
+* [修改租户系统变量](../../../2.tenant-management/6.common-tenant-operations/7.modify-system-variables-of-tenant.md)
